--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
     <!-- Portfolio -->
 
     <section id="portfolio" class="py-5 bg-light">
+            <h2 class="display-4 text-center text-lg-left">Portfolio</h2>
 
         <div class="container">
 
-            <h2 class="display-4">Portfolio</h2>
             <div class="row">
-                <div class="col-12 col-sm-6 mt-4 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
                         <img src="portfolio-images/rush.jpg" class="card-img-top" alt="...">
                         <div class="card-body bg-light">
@@ -200,7 +200,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 mt-4 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
                         <img src="portfolio-images/Prime.jpg" class="card-img-top " alt="...">
                         <div class="card-body bg-light">
@@ -216,7 +216,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 mt-4 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
                         <img src="portfolio-images/boxing.jpg" class="card-img-top" alt="...">
                         <div class="card-body bg-light">
