--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
         <div class="container">
-            <li class="navbar-brand text-info"> <i class="devicon-visualstudio-plain colored"></i> Prestige Worldwide
+            <li class="navbar-brand text-info"> <i class="devicon-visualstudio-plain colored"></i> Ben Jones - Web Dev
             </li>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
