adds links to github repos and hosted sites

--- a/index.html
+++ b/index.html
@@ -127,21 +127,11 @@
             <h2 class="display-2 text-muted text-left">About</h2>
             <div class="row">
                 <div class="col col-md-6">
-                    <p class="lead text-light">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et, voluptas
-                        quae! Unde, at? Aliquid
-                        exercitationem aut nostrum tenetur, quidem sit, maxime placeat possimus numquam at nesciunt
-                        modi,
-                        fugit cumque error quisquam. Delectus, omnis officia deleniti provident a esse. Molestiae
-                        officiis
-                        asperiores exercitationem! Magnam, numquam aspernatur reprehenderit saepe molestias dignissimos
-                        vero.</p>
+                    <p class="lead text-light">Software developer who completed the Northcoders fullstack coding bootcamp; an intensive three month program focussed on developing the ability to work with the most popular current technologies, as well as learning the technical skills necessary to assimilate new technologies through research and practical application. Previously worked at a senior level as an independent contractor in financial services as a manager, trainer and Quality Assurance specialist with 14 years of hands on experience.</p>
 
-                    <p class="lead text-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-                        quisquam voluptatem id
-                        consequuntur deleniti asperiores officiis autem expedita omnis vero, provident recusandae
-                        delectus. Adipisci est sint aliquid quidem dolores? Ut numquam impedit, magnam fugit quisquam
-                        possimus nostrum suscipit molestias nulla vitae aspernatur eos, consequatur odio nihil atque,
-                        qui repellendus! Accusantium.</p>
+                    <p class="lead text-light">Aside from coding, I've had a lifelong interest in music, playing in various bands around the UK, as well as having music played on radio in the UK and the US. Beyond music, I've competed in boxing, and have been a ken motorcyclist, riding as many as 50,000 miles in a year</p>
+
+                   
                 </div>
                 <div class="d-none d-md-block col-md-6 pl-5">
                     <div class="row">
@@ -185,54 +175,39 @@
                 <h2 class="display-4 text-center text-lg-left">Portfolio</h2>
 
             <div class="row">
-                <div class="col-12 col-md-6 col-lg-4 mt-4">
+                <div class="col-12 col-md-6 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
-                        <img src="portfolio-images/rush.jpg" class="card-img-top" alt="...">
+                        <img src="portfolio-images/tradr.png" class="card-img-top" alt="...">
                         <div class="card-body bg-light">
-                            <h5 class="card-title text-info">Rush-Omni-Presenter v2.1.1.2</h5>
-                            <p class="card-text">A Revolutionary app for a Revolutionary band. This app brings the music
-                                of Rush into your presence at all times... whether you like it or not.</p>
+                            <h5 class="card-title text-info">Tradr</h5>
+                            <p class="card-text">A web app for posting home improvement projects, and searching for local tradespeople that can complete the work. Allows traders to create accounts, receive job requests, and communicate via a dedicated project page</p>
                         </div>
                         <div class="card-body">
-                            <a href="#" class="btn btn-outline-danger"><i class="fas fa-heart    fa-2x mr-2"></i> Go to
-                                App</a>
+                            <a href="https://github.com/Shubwub/Tradr." target="_blank" class="btn btn-outline-danger"><i class="fas fa-heart fa-2x mr-2"></i> Go to
+                                Repo</a>
+                            <a href="https://nc-tradr.netlify.com/" target="_blank" class="btn btn-outline-success mt-2"><i class="fas fa-heart fa-2x mr-2"></i> Go to
+                                Hosted Version</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4 mt-4">
+                <div class="col-12 col-md-6 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
-                        <img src="portfolio-images/Prime.jpg" class="card-img-top " alt="...">
+                        <img src="portfolio-images/news logo.png" class="card-img-top " alt="...">
                         <div class="card-body bg-light">
-                            <h5 class="card-title text-info pt-2">Prime-Inspiration</h5>
-                            <p class="card-text">Having a bad day? Need the kind of pick-me-up that only a leader can
-                                deliver? The Prime-Inspiration app delivers random Optimus Prime quotes to your phone...
-                                no matter the cost.</p>
+                            <h5 class="card-title text-info pt-2">NC News</h5>
+                            <p class="card-text">A fullstack news aggregation site. Articles and comments can be voted on, and new comments can be added.</p>
                         </div>
                         <div class="card-body">
-                            <a href="#" class="btn btn-outline-danger"><i class="fas fa-heart fa-2x mr-2"></i> Go to
-                                App</a>
+                            <a href="https://github.com/By-Tor2114/nc-news-frontend" target="_blank" class="btn btn-outline-danger"><i class="fas fa-heart fa-2x mr-2"></i> Go to
+                                Repo</a>
+                            <a href="https://elegant-snyder-34f60a.netlify.com/" target="_blank" class="btn btn-outline-success mt-2"><i class="fas fa-heart fa-2x mr-2"></i> Go to
+                                    Hosted Version</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 col-lg-4 mt-4">
-                    <div class="card mt-4 mt-md-0" style="width: 18rem;">
-                        <img src="portfolio-images/boxing.jpg" class="card-img-top" alt="...">
-                        <div class="card-body bg-light">
-                            <h5 class="card-title text-info pt-3">10 Kount</h5>
-                            <p class="card-text mb-n4">Tired of trawling the web in search of the latest boxing news and
-                                fight
-                                dates? Dance like a butterfly and sting like a bee while 10 Kount brings it all to the
-                                palm of your hand, without the blood, sweat and
-                                tears.</p>
-                        </div>
-                        <div class="card-body">
-                            <a href="#" class="btn btn-outline-danger"><i class="fas fa-heart fa-2x mr-2"></i> Go to
-                                App</a>
-                        </div>
-                    </div>
-                </div>
+            
             </div>
         </div>
     </section>
