updates tech stack

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div data-interval="4000" class="carousel-item carousel-image-2">
                     <div class="carousel-caption text-left text-sm-center">
                         <h5 class="display-4 text-shrink">Fast</h5>
-                        <p class="lead">Saving You Time; Saving You Money</p>
+                        <p class="lead">Saving you time; saving you money</p>
                     </div>
                 </div>
                 <div data-interval="4000" class="carousel-item carousel-image-3">
@@ -95,26 +95,36 @@
     <section id="languages" class="p-5 bg-light text-center">
         <div class="container py-5">
             <div class="row">
-                <div class="col-12 mt-3 m-md-0 col-md-3">
+                <div class="col-12 mt-3 m-md-0 col-md-4">
                     <i class="devicon-bootstrap-plain-wordmark colored display-3"></i>
                     <h3 class="display-5">Mobile First</h3>
                     <p class="lead text-muted">Designs that guarantee compatibility with all devices and all screen
                         sizes</p>
                 </div>
-                <div class="col-12 mt-3 m-md-0 col-md-3">
+                <div class="col-12 mt-3 m-md-0 col-md-4">
                     <i class="devicon-html5-plain-wordmark colored display-3"></i>
                     <h3 class="display-5">Structure</h3>
                     <p class="lead text-muted">Keeping it simple; Keeping it professional</p>
                 </div>
-                <div class="col-12 mt-3 m-md-0 col-md-3">
+                <div class="col-12 mt-3 m-md-0 col-md-4">
                     <i class="devicon-css3-plain-wordmark colored display-3"></i>
                     <h3 class="display-5">Design and Layout</h3>
                     <p class="lead text-muted">Because I don't look good until you look good</p>
                 </div>
-                <div class="col-12 mt-3 m-md-0 col-md-3">
+                <div class="col-12 mt-3 m-md-0 col-md-4">
                     <i class="devicon-react-original-wordmark colored display-3"></i>
                     <h3 class="display-5">Intuitive UI Experience</h3>
                     <p class="lead text-muted">Because no one likes it vanilla</p>
+                </div>
+                <div class="col-12 mt-3 m-md-0 col-md-4">
+                    <i class="devicon-postgresql-plain-wordmark colored display-3"></i>
+                    <h3 class="display-5">Data, glorious data</h3>
+                    <p class="lead text-muted">Storing and retrieving all the information</p>
+                </div>
+                <div class="col-12 mt-3 m-md-0 col-md-4">
+                    <i class="devicon-mocha-plain colored display-3"></i>
+                    <h3 class="display-5">Testing until you break</h3>
+                    <p class="lead text-muted">If it ain't broke, you should probably test it</p>
                 </div>
             </div>
         </div>
