--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="col col-md-6">
                     <p class="lead text-light">Software developer who completed the Northcoders fullstack coding bootcamp; an intensive three month program focussed on developing the ability to work with the most popular current technologies, as well as learning the technical skills necessary to assimilate new technologies through research and practical application. Previously worked at a senior level as an independent contractor in financial services as a manager, trainer and Quality Assurance specialist with 14 years of hands on experience.</p>
 
-                    <p class="lead text-light">Aside from coding, I've had a lifelong interest in music, playing in various bands around the UK, as well as having music played on radio in the UK and the US. Beyond music, I've competed in boxing, and have been a ken motorcyclist, riding as many as 50,000 miles in a year</p>
+                    <p class="lead text-light">Aside from coding, I've had a lifelong interest in music, playing in various bands around the UK, as well as having music played on radio in the UK and the US. Beyond music, I've competed in boxing, and have been a keen motorcyclist, riding as many as 50,000 miles in a year</p>
 
                    
                 </div>
@@ -185,7 +185,7 @@
                 <h2 class="display-4 text-center text-lg-left">Portfolio</h2>
 
             <div class="row">
-                <div class="col-12 col-md-6 mt-4">
+                <div class="col-12 col-md-4 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
                         <img src="portfolio-images/tradr.png" class="card-img-top" alt="...">
                         <div class="card-body bg-light">
@@ -201,7 +201,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-6 mt-4">
+                <div class="col-12 col-md-4 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
                         <img src="portfolio-images/news logo.png" class="card-img-top " alt="...">
                         <div class="card-body bg-light">
@@ -212,6 +212,22 @@
                             <a href="https://github.com/By-Tor2114/nc-news-frontend" target="_blank" class="btn btn-outline-danger"><i class="fas fa-heart fa-2x mr-2"></i> Go to
                                 Repo</a>
                             <a href="https://elegant-snyder-34f60a.netlify.com/" target="_blank" class="btn btn-outline-success mt-2"><i class="fas fa-heart fa-2x mr-2"></i> Go to
+                                    Hosted Version</a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-12 col-md-4 mt-4">
+                    <div class="card mt-4 mt-md-0" style="width: 18rem;">
+                        <img src="portfolio-images/git finder.png" class="card-img-top " alt="...">
+                        <div class="card-body bg-light">
+                            <h5 class="card-title text-info pt-2">Github Finder</h5>
+                            <p class="card-text">A simple React app for searching GitHub for users, demonstrating the use of fundamental API calls using Axios</p>
+                        </div>
+                        <div class="card-body">
+                            <a href="https://github.com/By-Tor2114/github-finder" target="_blank" class="btn btn-outline-danger"><i class="fas fa-heart fa-2x mr-2"></i> Go to
+                                Repo</a>
+                            <a href="https://gitlocater.netlify.com/" target="_blank" class="btn btn-outline-success mt-2"><i class="fas fa-heart fa-2x mr-2"></i> Go to
                                     Hosted Version</a>
                         </div>
                     </div>
