adds further info to git hug finder description

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <img src="portfolio-images/git finder.png" class="card-img-top " alt="...">
                         <div class="card-body bg-light">
                             <h5 class="card-title text-info pt-2">Github Finder</h5>
-                            <p class="card-text">A simple React app for searching GitHub for users, demonstrating the use of fundamental API calls using Axios</p>
+                            <p class="card-text">A simple React app for searching GitHub for users, demonstrating the use of fundamental API calls using Axios. Search terms are extended to user names and bio information, allowing for a broader search</p>
                         </div>
                         <div class="card-body">
                             <a href="https://github.com/By-Tor2114/github-finder" target="_blank" class="btn btn-outline-danger"><i class="fas fa-heart fa-2x mr-2"></i> Go to
