adds further responsive layout for portfolio section at different screen sizes

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <h2 class="display-4 text-center text-lg-left">Portfolio</h2>
 
             <div class="row">
-                <div class="col-12 col-md-4 mt-4">
+                <div class="col-12 col-md-6 col-lg-4 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
                         <img src="portfolio-images/tradr.png" class="card-img-top" alt="...">
                         <div class="card-body bg-light">
@@ -201,7 +201,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-4 mt-4">
+                <div class="col-12 col-md-6 col-lg-4 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
                         <img src="portfolio-images/news logo.png" class="card-img-top " alt="...">
                         <div class="card-body bg-light">
@@ -217,7 +217,7 @@
                     </div>
                 </div>
                 
-                <div class="col-12 col-md-4 mt-4">
+                <div class="col-12 col-md-6 col-lg-4 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
                         <img src="portfolio-images/git finder.png" class="card-img-top " alt="...">
                         <div class="card-body bg-light">
