--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
                             Contact
                         </a>
                         <div class="dropdown-menu border border-info text-left" aria-labelledby="navbarDropdown">
-                            <p class="pl-2 text-muted"><i class="pr-1 fas fa-phone"></i> 07777 777777</p>
-                            <p class="pl-2 text-muted"><i class="pr-1 fas fa-at"></i> <a class="text-decoration-none text-muted" href="mailto:no@email.com">no@email.com</a></p>
+                            <p class="pl-2 text-muted"><i class="pr-1 fas fa-at"></i> <a class="text-decoration-none text-muted" href="mailto:By_Tor2114_uk@yahoo.com">By_Tor2114_uk@yahoo.com</a></p>
                         </div>
                 </ul>
             </div>
