Adds a link to github profile

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             Contact
                         </a>
                         <div class="dropdown-menu border border-info text-left" aria-labelledby="navbarDropdown">
-                            <p class="pl-2 text-muted"><i class="pr-1 fas fa-at"></i> <a class="text-decoration-none text-muted" href="mailto:By_Tor2114_uk@yahoo.com">By_Tor2114_uk@yahoo.com</a></p>
+                            <p class="pl-2 text-muted">e-mail:  <a class="text-decoration-none text-info mr-2" href="mailto:by_tor2114_uk@yahoo.com">by_tor2114_uk@yahoo.com</a></p>
                         </div>
                 </ul>
             </div>
@@ -182,6 +182,7 @@
 
         <div class="container">
                 <h2 class="display-4 text-center text-lg-left">Portfolio</h2>
+                <h2 class=' my-5'>Visit my <a href="https://github.com/By-Tor2114" target='_blank'> <i class="devicon-github-plain-wordmark display-2 text-info"></i></a></h2>
 
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4 mt-4">
