--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
         <div class="container">
                 <h2 class="display-4 text-center text-lg-left">Portfolio</h2>
-                <h2 class=' my-5'>Visit my <a href="https://github.com/By-Tor2114" target='_blank'> <i class="devicon-github-plain-wordmark display-2 text-info"></i></a></h2>
+                <h2 class='text-center text-lg-left my-5'>Visit my <a href="https://github.com/By-Tor2114" target='_blank'> <i class="devicon-github-plain-wordmark display-2 text-info"></i></a></h2>
 
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4 mt-4">
