Adds Burger Builder to portfolio

--- a/index.html
+++ b/index.html
@@ -203,6 +203,22 @@
 
                 <div class="col-12 col-md-6 col-lg-4 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
+                        <img src="portfolio-images/burger-logo.png" class="card-img-top" alt="...">
+                        <div class="card-body bg-light">
+                            <h5 class="card-title text-info">Ben's Burger Builder</h5>
+                            <p class="card-text">A web app built for creating and ordering a burger. Users can login and retrieve orders, as well as enter full order details that can be retrieved from Firebase</p>
+                        </div>
+                        <div class="card-body">
+                            <a href="https://github.com/By-Tor2114/burgerBuilder" target="_blank" class="btn btn-outline-danger"><i class="fas fa-heart fa-2x mr-2"></i> Go to
+                                Repo</a>
+                            <a href="https://bens-burger-builder.netlify.com/" target="_blank" class="btn btn-outline-success mt-2"><i class="fas fa-heart fa-2x mr-2"></i> Go to
+                                Hosted Version</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4 mt-4">
+                    <div class="card mt-4 mt-md-0" style="width: 18rem;">
                         <img src="portfolio-images/news logo.png" class="card-img-top " alt="...">
                         <div class="card-body bg-light">
                             <h5 class="card-title text-info pt-2">NC News</h5>
