Updates 'about' section

--- a/index.html
+++ b/index.html
@@ -136,9 +136,18 @@
             <h2 class="display-2 text-muted text-left">About</h2>
             <div class="row">
                 <div class="col col-md-6">
-                    <p class="lead text-light">Software developer who completed the Northcoders fullstack coding bootcamp; an intensive three month program focussed on developing the ability to work with the most popular current technologies, as well as learning the technical skills necessary to assimilate new technologies through research and practical application. Previously worked at a senior level as an independent contractor in financial services as a manager, trainer and Quality Assurance specialist with 14 years of hands on experience.</p>
+                    <p class="lead text-light">
+                        Web developer who has recently been working for a data company in Leicester/London. Having previously 
+                        worked at a senior level as an independent contractor in financial services as a manager, trainer and Quality 
+                        Assurance specialist, I re-trained from financial services at the Northcoders fullstack coding bootcamp; an 
+                        intensive three month program focussed on developing the ability to work with the most popular current 
+                        technologies, as well as learning the technical skills necessary to assimilate new technologies through research 
+                        and practical application. 
+                    </p>
 
                     <p class="lead text-light">Aside from coding, I've had a lifelong interest in music, playing in various bands around the UK, as well as having music played on radio in the UK and the US. Beyond music, I've competed in boxing, and have been a keen motorcyclist, riding as many as 50,000 miles in a year</p>
+
+               
 
                    
                 </div>
