Adds FS dashboard to portfolio section

--- a/index.html
+++ b/index.html
@@ -194,6 +194,23 @@
                 <h2 class='text-center text-lg-left my-5'>Visit my <a href="https://github.com/By-Tor2114" target='_blank'> <i class="devicon-github-plain-wordmark display-2 text-info"></i></a></h2>
 
             <div class="row">
+
+                <div class="col-12 col-md-6 col-lg-4 mt-4">
+                    <div class="card mt-4 mt-md-0" style="width: 18rem;">
+                        <img src="portfolio-images/fx-dashboard.png" class="card-img-top" alt="...">
+                        <div class="card-body bg-light">
+                            <h5 class="card-title text-info">Forex Dashboard</h5>
+                            <p class="card-text">A full stack web app for forex traders to record their trading history, break down profit and loss by currency pairs, as well as by directions traded, allowing for a clearer view of where losses may be reduced. Currently being tested by members of Forex Factory.</p>
+                        </div>
+                        <div class="card-body">
+                            <a href="https://github.com/By-Tor2114/forex-dashboard-fe" target="_blank" class="btn btn-outline-danger"><i class="fas fa-heart fa-2x mr-2"></i> Go to
+                                Repo</a>
+                            <a href="https://fx-dashboard.netlify.com/" target="_blank" class="btn btn-outline-success mt-2"><i class="fas fa-heart fa-2x mr-2"></i> Go to
+                                Hosted Version</a>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-12 col-md-6 col-lg-4 mt-4">
                     <div class="card mt-4 mt-md-0" style="width: 18rem;">
                         <img src="portfolio-images/tradr.png" class="card-img-top" alt="...">
